--- a/index.css
+++ b/index.css
@@ -51,7 +51,6 @@ h1 {
 }
 
 h3  {
-    
     font-size: small;
     font-weight: 100;
     padding: 0.2rem;
@@ -63,20 +62,18 @@ h3  {
 .viewer {
     flex-direction: column;
     position:relative;
-    width: 70%;
+    width: 80%;
     border-right: 2px solid gray;
-    background-color: none;
+    background-color: rgba(255, 255, 255, 0);
     height: 100%;
-    display: flex;
-    
+    display: flex;      
 }
 
 #three-canvas{
-    height: 800px;
+    height: auto;
     position :relative;
-    
-    touch-action: true ;
-
+    width: auto;
+    height: 700px;
 }
 
 #three-gui{
@@ -89,6 +86,6 @@ h3  {
 .rightbar {
     flex-direction: column;
     background-color: aqua;
-    width: 30%;
+    width: 20%;
     /*height: 100%;*/
 }
