--- a/index.css
+++ b/index.css
@@ -45,24 +45,31 @@ h1 {
     display: flex;
     flex-direction: row;
     height: 100%;
-    margin-top: 0.2rem;
+   
     border: 2px solid gray;
     
 }
 
 h3  {
-    font-size: small;
+    font-size:large;
     font-weight: 100;
     padding: 0.2rem;
     background-color:#00000049;
     margin: 0;
     
 }
+.label{
+    background-color: #00000049;
+}
+
+.hidden-label{
+    display: none;
+}
 
 .viewer {
     flex-direction: column;
     position:relative;
-    width: 80%;
+    width: 100%;
     border-right: 2px solid gray;
     background-color: rgba(255, 255, 255, 0);
     height: 100%;
@@ -72,8 +79,8 @@ h3  {
 #three-canvas{
     height: auto;
     position :relative;
-    width: auto;
-    height: 700px;
+    width: 100%;
+    height: 100%;
 }
 
 #three-gui{
@@ -86,6 +93,6 @@ h3  {
 .rightbar {
     flex-direction: column;
     background-color: aqua;
-    width: 20%;
+    
     /*height: 100%;*/
 }
