--- a/index.css
+++ b/index.css
@@ -11,7 +11,6 @@ h1 {
     font-size: small;
     color: rgb(122, 122, 122);
     margin: 0.5rem;
-    
 }
 
 
@@ -44,10 +43,7 @@ h1 {
     width:auto;
     display: flex;
     flex-direction: row;
-    height: 100%;
-   
     border: 2px solid gray;
-    
 }
 
 h3  {
@@ -73,7 +69,6 @@ h3  {
     width: 100%;
     border-right: 2px solid gray;
     background-color: rgba(255, 255, 255, 0);
-    height: 100%;
     display: flex;      
 }
 
@@ -81,7 +76,8 @@ h3  {
     height: auto;
     position :relative;
     width: 100%;
-    height: 100%;
+    display: flex;
+    
 }
 
 #three-gui{
