--- a/index.css
+++ b/index.css
@@ -51,8 +51,8 @@ h1 {
 
 h3  {
     
-    font-size: small;
-    font-weight: 100;
+    font-size: medium;
+    font-weight: 150;
     padding: 0.2rem;
     background-color:#00000049;
     margin: 0;
